--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -12,7 +12,7 @@
                      <a href="/courses/{{this.slug}}">
                         <h5 class="card-title">{{this.name}}</h5>
                      </a>
-                    <p class="card-text">{{this.desription}}</p>
+                    <p class="card-text">{{this.description}}</p>
                     <a href="#" class="btn btn-primary">Mua khoa hoc</a>
                 </div>
             </div>
